Added SWD Ports

--- a/TemperatureHumidityEPD.ioc
+++ b/TemperatureHumidityEPD.ioc
@@ -36,18 +36,20 @@ Mcu.Name=STM32L031F(4-6)Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PA1
 Mcu.Pin1=PA2
-Mcu.Pin10=VP_RTC_VS_RTC_Calendar
-Mcu.Pin11=VP_RTC_VS_RTC_WakeUp_intern
-Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin10=VP_ADC_Vref_Input
+Mcu.Pin11=VP_RTC_VS_RTC_Activate
+Mcu.Pin12=VP_RTC_VS_RTC_Calendar
+Mcu.Pin13=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin14=VP_SYS_VS_Systick
 Mcu.Pin2=PA3
 Mcu.Pin3=PA4
 Mcu.Pin4=PA5
 Mcu.Pin5=PA7
 Mcu.Pin6=PA9
 Mcu.Pin7=PA10
-Mcu.Pin8=VP_ADC_Vref_Input
-Mcu.Pin9=VP_RTC_VS_RTC_Activate
-Mcu.PinsNb=13
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
+Mcu.PinsNb=15
 Mcu.UserConstants=
 Mcu.UserName=STM32L031F6Px
 MxCube.Version=4.23.0
@@ -64,6 +66,10 @@ PA1.Locked=true
 PA1.Signal=GPIO_Output
 PA10.Mode=I2C
 PA10.Signal=I2C1_SDA
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_SWCLK
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=DC
 PA2.Locked=true
