--- a/TemperatureHumidityEPD.ioc
+++ b/TemperatureHumidityEPD.ioc
@@ -50,6 +50,7 @@ Mcu.Pin7=PA10
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
 Mcu.PinsNb=15
+Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L031F6Px
 MxCube.Version=4.23.0
@@ -58,6 +59,7 @@ NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.RTC_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
 PA1.GPIOParameters=GPIO_Label
@@ -102,7 +104,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=/Users/kevin/STM32Cube/Repository/STM32Cube_FW_L0_V1.10.0
+ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32L031F6Px
@@ -113,6 +115,7 @@ ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
+ProjectManager.MainLocation=Src
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=TemperatureHumidityEPD.ioc
@@ -121,7 +124,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_RTC_Init-RTC-false-HAL,5-MX_I2C1_Init-I2C1-false-HAL,6-MX_SPI1_Init-SPI1-false-HAL,7-MX_ADC_Init-ADC-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_ADC_Init-ADC-false-HAL-true
 RCC.AHBFreq_Value=2097000
 RCC.APB1Freq_Value=2097000
 RCC.APB1TimFreq_Value=2097000
@@ -147,6 +150,8 @@ RCC.TIMFreq_Value=2097000
 RCC.USART2Freq_Value=2097000
 RCC.VCOOutputFreq_Value=48000000
 RCC.WatchDogFreq_Value=37000
+RTC.IPParameters=WakeUpCounter-WakeUp
+RTC.WakeUpCounter-WakeUp=46250
 SPI1.CalculateBaudRate=1.0485 MBits/s
 SPI1.Direction=SPI_DIRECTION_1LINE
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
