--- a/TemperatureHumidityEPD.ioc
+++ b/TemperatureHumidityEPD.ioc
@@ -1,6 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.I2C1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.I2C1_RX.0.Instance=DMA1_Channel3
+Dma.I2C1_RX.0.Instance=DMA1_Channel7
 Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.I2C1_RX.0.MemInc=DMA_MINC_ENABLE
 Dma.I2C1_RX.0.Mode=DMA_NORMAL
@@ -21,6 +21,8 @@ Dma.Request0=I2C1_RX
 Dma.Request1=I2C1_TX
 Dma.RequestsNb=2
 File.Version=6
+I2C1.IPParameters=Timing
+I2C1.Timing=0x00000708
 KeepUserPlacement=false
 Mcu.Family=STM32L0
 Mcu.IP0=ADC
@@ -56,6 +58,7 @@ Mcu.UserName=STM32L031F6Px
 MxCube.Version=4.23.0
 MxDb.Version=DB.4.0.230
 NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA1_Channel4_5_6_7_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -63,7 +66,7 @@ NVIC.RTC_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
 PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=RST
+PA1.GPIO_Label=SPI_CS
 PA1.Locked=true
 PA1.Signal=GPIO_Output
 PA10.Mode=I2C
@@ -77,15 +80,19 @@ PA2.GPIO_Label=DC
 PA2.Locked=true
 PA2.Signal=GPIO_Output
 PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=BUSY
+PA3.GPIO_Label=RST
 PA3.Locked=true
-PA3.Signal=GPIO_Input
+PA3.Signal=GPIO_Output
 PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=SPI_CS
+PA4.GPIO_Label=BUSY
 PA4.Locked=true
-PA4.Signal=GPIO_Output
+PA4.Signal=GPIO_Input
+PA5.GPIOParameters=GPIO_Speed
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA5.Mode=Simplex_Bidirectional_Master
 PA5.Signal=SPI1_SCK
+PA7.GPIOParameters=GPIO_Speed
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA7.Mode=Simplex_Bidirectional_Master
 PA7.Signal=SPI1_MOSI
 PA9.Mode=I2C
@@ -101,15 +108,15 @@ PCC.Vdd=3.0
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
-ProjectManager.CompilerOptimize=2
+ProjectManager.CompilerOptimize=3
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=
+ProjectManager.CustomerFirmwarePackage=/home/kevin/STM32Cube/Repository/STM32Cube_FW_L0_V1.10.0
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32L031F6Px
 ProjectManager.FirmwarePackage=STM32Cube FW_L0 V1.10.0
-ProjectManager.FreePins=false
+ProjectManager.FreePins=true
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
@@ -125,36 +132,44 @@ ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_ADC_Init-ADC-false-HAL-true
+RCC.ADCFreq_Value=16000000
 RCC.AHBFreq_Value=2097000
 RCC.APB1Freq_Value=2097000
 RCC.APB1TimFreq_Value=2097000
 RCC.APB2Freq_Value=2097000
 RCC.APB2TimFreq_Value=2097000
+RCC.FCLKCortexFreq_Value=2097000
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=2097000
 RCC.HSE_VALUE=8000000
 RCC.HSI16_VALUE=16000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=2097000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FamilyName,HSE_VALUE,HSI16_VALUE,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,TIMFreq_Value,USART2Freq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,TIMFreq_Value,TimerFreq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
 RCC.LPTIMFreq_Value=2097000
 RCC.LPUARTFreq_Value=2097000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=37000
+RCC.MCOPinFreq_Value=2097000
 RCC.MSI_VALUE=2097000
-RCC.PLLCLKFreq_Value=24000000
+RCC.PLLCLKFreq_Value=32000000
+RCC.PLLMUL=RCC_PLLMUL_4
 RCC.PWRFreq_Value=2097000
 RCC.RTCFreq_Value=37000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=2097000
 RCC.TIMFreq_Value=2097000
+RCC.TimerFreq_Value=2097000
 RCC.USART2Freq_Value=2097000
-RCC.VCOOutputFreq_Value=48000000
+RCC.VCOInputFreq_Value=16000000
+RCC.VCOOutputFreq_Value=64000000
 RCC.WatchDogFreq_Value=37000
 RTC.IPParameters=WakeUpCounter-WakeUp
 RTC.WakeUpCounter-WakeUp=46250
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=1.0485 MBits/s
 SPI1.Direction=SPI_DIRECTION_1LINE
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 VP_ADC_Vref_Input.Mode=IN-Vrefint
