--- a/TemperatureHumidityEPD.ioc
+++ b/TemperatureHumidityEPD.ioc
@@ -22,7 +22,7 @@ Dma.Request1=I2C1_TX
 Dma.RequestsNb=2
 File.Version=6
 I2C1.IPParameters=Timing
-I2C1.Timing=0x00303D5B
+I2C1.Timing=0x00000708
 KeepUserPlacement=false
 Mcu.Family=STM32L0
 Mcu.IP0=ADC
@@ -38,20 +38,21 @@ Mcu.Name=STM32L031F(4-6)Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PA1
 Mcu.Pin1=PA2
-Mcu.Pin10=VP_ADC_Vref_Input
-Mcu.Pin11=VP_RTC_VS_RTC_Activate
-Mcu.Pin12=VP_RTC_VS_RTC_Calendar
-Mcu.Pin13=VP_RTC_VS_RTC_WakeUp_intern
-Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin10=PA14
+Mcu.Pin11=VP_ADC_Vref_Input
+Mcu.Pin12=VP_RTC_VS_RTC_Activate
+Mcu.Pin13=VP_RTC_VS_RTC_Calendar
+Mcu.Pin14=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin2=PA3
 Mcu.Pin3=PA4
 Mcu.Pin4=PA5
-Mcu.Pin5=PA7
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=15
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=PA13
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L031F6Px
@@ -91,6 +92,11 @@ PA5.GPIOParameters=GPIO_Speed
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA5.Mode=Simplex_Bidirectional_Master
 PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
+PA6.GPIO_Label=EPD_POWER
+PA6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA6.Locked=true
+PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Speed
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA7.Mode=Simplex_Bidirectional_Master
@@ -133,42 +139,42 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_ADC_Init-ADC-false-HAL-true
 RCC.ADCFreq_Value=16000000
-RCC.AHBFreq_Value=16000000
-RCC.APB1Freq_Value=16000000
-RCC.APB1TimFreq_Value=16000000
-RCC.APB2Freq_Value=16000000
-RCC.APB2TimFreq_Value=16000000
-RCC.FCLKCortexFreq_Value=16000000
+RCC.AHBFreq_Value=2097000
+RCC.APB1Freq_Value=2097000
+RCC.APB1TimFreq_Value=2097000
+RCC.APB2Freq_Value=2097000
+RCC.APB2TimFreq_Value=2097000
+RCC.FCLKCortexFreq_Value=2097000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=16000000
+RCC.HCLKFreq_Value=2097000
 RCC.HSE_VALUE=8000000
 RCC.HSI16_VALUE=16000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=16000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
-RCC.LPTIMFreq_Value=16000000
-RCC.LPUARTFreq_Value=16000000
+RCC.I2C1Freq_Value=2097000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,TIMFreq_Value,TimerFreq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
+RCC.LPTIMFreq_Value=2097000
+RCC.LPUARTFreq_Value=2097000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=37000
-RCC.MCOPinFreq_Value=16000000
+RCC.MCOPinFreq_Value=2097000
 RCC.MSI_VALUE=2097000
 RCC.PLLCLKFreq_Value=32000000
 RCC.PLLMUL=RCC_PLLMUL_4
-RCC.PWRFreq_Value=16000000
+RCC.PWRFreq_Value=2097000
 RCC.RTCFreq_Value=37000
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SYSCLKFreq_VALUE=16000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI
-RCC.TIMFreq_Value=16000000
-RCC.TimerFreq_Value=16000000
-RCC.USART2Freq_Value=16000000
+RCC.SYSCLKFreq_VALUE=2097000
+RCC.TIMFreq_Value=2097000
+RCC.TimerFreq_Value=2097000
+RCC.USART2Freq_Value=2097000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=64000000
 RCC.WatchDogFreq_Value=37000
-RTC.IPParameters=WakeUpCounter-WakeUp
-RTC.WakeUpCounter-WakeUp=46250
+RTC.IPParameters=WakeUpCounter-WakeUp,WakeUpClock-WakeUp
+RTC.WakeUpClock-WakeUp=RTC_WAKEUPCLOCK_CK_SPRE_16BITS
+RTC.WakeUpCounter-WakeUp=60
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI1.CalculateBaudRate=8.0 MBits/s
+SPI1.CalculateBaudRate=1.0485 MBits/s
 SPI1.Direction=SPI_DIRECTION_1LINE
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
