--- a/TemperatureHumidityEPD.ioc
+++ b/TemperatureHumidityEPD.ioc
@@ -21,8 +21,6 @@ Dma.Request0=I2C1_RX
 Dma.Request1=I2C1_TX
 Dma.RequestsNb=2
 File.Version=6
-I2C1.IPParameters=Timing
-I2C1.Timing=0x00000708
 KeepUserPlacement=false
 Mcu.Family=STM32L0
 Mcu.IP0=ADC
@@ -56,10 +54,11 @@ Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L031F6Px
-MxCube.Version=4.23.0
-MxDb.Version=DB.4.0.230
+MxCube.Version=4.25.0
+MxDb.Version=DB.4.0.250
 NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA1_Channel4_5_6_7_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -87,7 +86,7 @@ PA3.Signal=GPIO_Output
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=BUSY
 PA4.Locked=true
-PA4.Signal=GPIO_Input
+PA4.Signal=GPXTI4
 PA5.GPIOParameters=GPIO_Speed
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA5.Mode=Simplex_Bidirectional_Master
@@ -117,7 +116,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=3
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=/home/kevin/STM32Cube/Repository/STM32Cube_FW_L0_V1.10.0
+ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32L031F6Px
@@ -151,7 +150,7 @@ RCC.HSE_VALUE=8000000
 RCC.HSI16_VALUE=16000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=2097000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,TIMFreq_Value,TimerFreq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PWRFreq_Value,PWR_Regulator_Voltage_Scale,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,TIMFreq_Value,TimerFreq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VDD_VALUE,WatchDogFreq_Value
 RCC.LPTIMFreq_Value=2097000
 RCC.LPUARTFreq_Value=2097000
 RCC.LSE_VALUE=32768
@@ -161,6 +160,7 @@ RCC.MSI_VALUE=2097000
 RCC.PLLCLKFreq_Value=32000000
 RCC.PLLMUL=RCC_PLLMUL_4
 RCC.PWRFreq_Value=2097000
+RCC.PWR_Regulator_Voltage_Scale=PWR_REGULATOR_VOLTAGE_SCALE3
 RCC.RTCFreq_Value=37000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=2097000
@@ -169,10 +169,16 @@ RCC.TimerFreq_Value=2097000
 RCC.USART2Freq_Value=2097000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=64000000
+RCC.VDD_VALUE=3
 RCC.WatchDogFreq_Value=37000
-RTC.IPParameters=WakeUpCounter-WakeUp,WakeUpClock-WakeUp
+RTC.AsynchPrediv=124
+RTC.IPParameters=WakeUpCounter-WakeUp,WakeUpClock-WakeUp,StoreOperation,AsynchPrediv,SynchPrediv
+RTC.StoreOperation=RTC_STOREOPERATION_RESET
+RTC.SynchPrediv=295
 RTC.WakeUpClock-WakeUp=RTC_WAKEUPCLOCK_CK_SPRE_16BITS
 RTC.WakeUpCounter-WakeUp=60
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=1.0485 MBits/s
 SPI1.Direction=SPI_DIRECTION_1LINE
