--- a/TemperatureHumidityEPD.ioc
+++ b/TemperatureHumidityEPD.ioc
@@ -1,12 +1,24 @@
 #MicroXplorer Configuration settings - do not modify
 ADC.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV1
-ADC.IPParameters=LowPowerAutoWait,LowPowerFrequencyMode,LowPowerAutoPowerOff,Resolution,ClockPrescaler
+ADC.ContinuousConvMode=DISABLE
+ADC.DMAContinuousRequests=DISABLE
+ADC.DataAlign=ADC_DATAALIGN_RIGHT
+ADC.DiscontinuousConvMode=DISABLE
+ADC.EOCSelection=ADC_EOC_SINGLE_CONV
+ADC.EnableAnalogWatchDog=false
+ADC.ExternalTrigConv=ADC_SOFTWARE_START
+ADC.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
+ADC.IPParameters=LowPowerAutoWait,LowPowerFrequencyMode,LowPowerAutoPowerOff,Resolution,ClockPrescaler,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,Overrun,OversamplingMode,SamplingTime,ExternalTrigConv,ExternalTrigConvEdge,EnableAnalogWatchDog
 ADC.LowPowerAutoPowerOff=DISABLE
 ADC.LowPowerAutoWait=ENABLE
 ADC.LowPowerFrequencyMode=ENABLE
+ADC.Overrun=ADC_OVR_DATA_PRESERVED
+ADC.OversamplingMode=DISABLE
 ADC.Resolution=ADC_RESOLUTION_12B
+ADC.SamplingTime=ADC_SAMPLETIME_1CYCLE_5
+ADC.ScanConvMode=ADC_SCAN_DIRECTION_FORWARD
 Dma.I2C1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.I2C1_RX.0.Instance=DMA1_Channel7
+Dma.I2C1_RX.0.Instance=DMA1_Channel3
 Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.I2C1_RX.0.MemInc=DMA_MINC_ENABLE
 Dma.I2C1_RX.0.Mode=DMA_NORMAL
@@ -14,18 +26,8 @@ Dma.I2C1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.I2C1_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.I2C1_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.I2C1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.I2C1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.I2C1_TX.1.Instance=DMA1_Channel2
-Dma.I2C1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C1_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.I2C1_TX.1.Mode=DMA_NORMAL
-Dma.I2C1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.I2C1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.Request0=I2C1_RX
-Dma.Request1=I2C1_TX
-Dma.RequestsNb=2
+Dma.RequestsNb=1
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32L0
@@ -63,9 +65,9 @@ Mcu.UserName=STM32L031F6Px
 MxCube.Version=4.25.0
 MxDb.Version=DB.4.0.250
 NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DMA1_Channel4_5_6_7_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.I2C1_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.RTC_IRQn=true\:0\:0\:false\:false\:true\:true
