--- a/TemperatureHumidityEPD.ioc
+++ b/TemperatureHumidityEPD.ioc
@@ -99,10 +99,11 @@ PA5.GPIOParameters=GPIO_Speed
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA5.Mode=Simplex_Bidirectional_Master
 PA5.Signal=SPI1_SCK
-PA6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
+PA6.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA6.GPIO_Label=EPD_POWER
 PA6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA6.Locked=true
+PA6.PinState=GPIO_PIN_SET
 PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Speed
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
